# StreamAudio

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  config.cpp  config.h  data_operator.cpp  data_operator.h  data_pack.cpp  data_pack.h  device.cpp  device.h  device_config.h  exceptions.cpp  exceptions.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  move_client_dialog.cpp  move_client_dialog.h  platform_utils.cpp  platform_utils.h  protocol_magic.cpp  protocol_magic.h  qrcode_dialog.cpp  qrcode_dialog.h  test_utils.h  tray_icon.cpp  tray_icon.h  version.h.in  winsock_guard.h
platform/: audio.h  audio_server.h  audio_server_common.cpp  config.h  platform_utils.cpp  platform_utils.h  qrcode_dialog.cpp  qrcode_dialog.h  socket.h  tray_icon.cpp  tray_icon.h  volume_control.h
platform/Linux/: audio.cpp  audio_server.cpp  volume_control.cpp
platform/Windows/: audio.cpp  audio_server.cpp  volume_control.cpp  winsock_guard.h
platform/linux/: audio.cpp  audio_server.cpp  config.cpp
platform/windows/: audio.cpp  audio_server.cpp  config.cpp  platform_utils.cpp
scripts/: icon-generate.sh
tests/: CMakeLists.txt  README.md  cpp_test.cpp  crypto_test.cpp  test_main.cpp  ware_test.cpp
tools/: base64.cpp  base64.h  crypto.cpp  crypto.h  data_pointer.cpp  data_pointer.h  hextool.cpp  hextool.h  qrcodegen.cpp  qrcodegen.h  qrcodegen.hpp  string.cpp  string.h
